creusot/tests/should_fail/prusti/deref/match.stderr
error: `&'pre std::option::Option<std::boxed::Box<u32>>` cannot be moved from `'pre` to `'post` since it doesn't live long enough
       `'pre` doesn't outlive `'post`
  --> match.rs:14:20
   |
14 | #[ensures({let x = old(x.mk_ref()); match x {None => true, Some(_) => true}})]
   |                    ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

